<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary" />

    <ImageView
        android:layout_below="@+id/tool_bar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="45dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:layout_marginStart="130dp"
        android:text="@string/app_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/app_version"
        android:layout_below="@id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="130dp"
        android:text="@string/app_version"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/app_author"
        android:layout_below="@id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="130dp"
        android:text="@string/app_author"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/contactWithAuthor"
        android:layout_width="match_parent"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:layout_height="39dp"
        android:layout_below="@id/app_author"
        android:layout_marginTop="55dp"
        android:background="@drawable/ripple_buttons"
        android:textSize="17sp"
        android:layout_centerInParent="true"
        android:text="@string/contact_with_author" />

    <Button
        android:id="@+id/rateApp"
        android:layout_width="match_parent"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:layout_height="39dp"
        android:layout_below="@id/contactWithAuthor"
        android:layout_marginTop="35dp"
        android:background="@drawable/ripple_buttons"
        android:textSize="17sp"
        android:layout_centerInParent="true"
        android:text="@string/rate_app" />

    <Button
        android:id="@+id/releaseNotes"
        android:layout_width="match_parent"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:layout_height="39dp"
        android:layout_below="@id/rateApp"
        android:layout_marginTop="35dp"
        android:background="@drawable/ripple_buttons"
        android:textSize="17sp"
        android:layout_centerInParent="true"
        android:text="@string/release_notes" />

</RelativeLayout>