<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar">

        <Button
            android:id="@+id/generateRandomData"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_below="@id/separator"
            android:layout_centerInParent="true"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="29dp"
            android:background="@drawable/ripple_buttons"
            android:text="@string/settings_generate_random_data"
            android:textSize="17sp" />

        <Button
            android:id="@+id/deleteAllData"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_below="@id/generateRandomData"
            android:layout_centerInParent="true"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="29dp"
            android:background="@drawable/ripple_buttons"
            android:text="@string/deleteAllData"
            android:textSize="17sp" />

        <CheckBox
            android:id="@+id/activatePresentingIncomes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activatePieChartAnimation"
            android:layout_marginStart="54dp"
            android:layout_marginTop="24dp"
            android:buttonTint="@color/check_box_color"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:text="@string/settings_present_incomes" />

        <CheckBox
            android:id="@+id/activateUsingCategoryNameIfNoteIsEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="59dp"
            android:layout_marginTop="24dp"
            android:buttonTint="@color/check_box_color"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:layout_below="@id/activatePresentingIncomes"
            android:text="@string/settings_empty_note" />

        <CheckBox
            android:id="@+id/activatePresentingTotalValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="24dp"
            android:buttonTint="@color/check_box_color"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:text="@string/settings_present_total_values" />

        <CheckBox
            android:id="@+id/activatePieChartAnimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activatePresentingTotalValues"
            android:layout_marginStart="49dp"
            android:layout_marginTop="24dp"
            android:buttonTint="@color/check_box_color"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:text="@string/settings_pie_chart_animation" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/activateUsingCategoryNameIfNoteIsEmpty"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="5dp"
            android:background="@color/separator_color" />

    </RelativeLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary" />

</RelativeLayout>