<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LimitsFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_transaction_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/add_transaction"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        app:useCompatPadding="true" />

    <TextView
        android:id="@+id/dailyLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="6dp"
        android:layout_alignParentLeft="true"
        android:text="@string/daily_limit"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dailyLimitSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dailyLimit"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="6dp"
        android:layout_alignParentLeft="true"
        android:text="@string/daily_limit_set"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/dailyLimitSetAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dailyLimit"
        android:layout_marginTop="3dp"
        android:layout_marginRight="6dp"
        android:layout_alignParentRight="true"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/dailyLimitLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dailyLimitSet"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="6dp"
        android:layout_alignParentLeft="true"
        android:text="@string/daily_limit_left"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/dailyLimitLeftAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dailyLimitSet"
        android:layout_marginTop="3dp"
        android:layout_marginRight="6dp"
        android:layout_alignParentRight="true"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/monthlyLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dailyLimitLeft"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="6dp"
        android:layout_alignParentLeft="true"
        android:text="@string/monthly_limit"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/monthlyLimitSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monthlyLimit"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="6dp"
        android:layout_alignParentLeft="true"
        android:text="@string/monthly_limit_set"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/monthlyLimitSetAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monthlyLimit"
        android:layout_marginTop="3dp"
        android:layout_marginRight="6dp"
        android:layout_alignParentRight="true"
        android:text=""
        android:textSize="17sp" />

    <TextView
        android:id="@+id/monthlyLimitLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monthlyLimitSet"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="6dp"
        android:layout_alignParentLeft="true"
        android:text="@string/monthly_limit_left"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/monthlyLimitLeftAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monthlyLimitSet"
        android:layout_marginTop="3dp"
        android:layout_marginRight="6dp"
        android:layout_alignParentRight="true"
        android:text=""
        android:textSize="17sp" />

    <Button
        android:id="@+id/acceptLimitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monthlyLimitLeft"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/accept_limit_button"
        android:textSize="30sp" />

</RelativeLayout>